<package>
  <name>pepper_meshes</name>
  <version>0.2.5</version>
  <description>meshes for the Aldebaran Robotics Pepper</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>

  <maintainer email="mbusy.pro@gmail.com">Maxime Busy</maintainer>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International Public License</license>

  <url>http://github.com/ros-naoqi/pepper_meshes/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>